--- a/index.html
+++ b/index.html
@@ -1,2 +1,61 @@
-coffee
-addict
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Coffee Addict</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<!-- LOGO -->
+<img src="/images/logo.png" alt="Coffee Addict İşletme logosu" id="logo">
+<h1>Coffee Addict</h1>
+<!-- NAVIGATION -->
+<ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Numbers</a></li>
+    <li><a href="#">Contact</a></li>
+</ul>
+<!-- HERO -->
+<div>
+    <img src="/images/background.jpeg" alt="Coffee Beans Hero İmage" width="100%">
+</div>
+<!-- CONTENT -->
+<main>
+    <h2>Featured Products</h2>
+    <!-- House Blend -->
+    <h3>House Blend Coffee</h3>
+    <img src="/images/house-blend.jpeg" alt="House blend coffee">
+    <p style="width: 50%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore reprehenderit harum sit totam quasi rerum natus saepe, neque magni repellat magnam minus aliquam provident assumenda tempora, nesciunt quisquam, laudantium voluptates. Quas nobis sapiente minus dignissimos voluptas odit odio dolorem nostrum vitae doloremque. Asperiores rerum nisi iste aliquid perspiciatis ratione ea?</p>
+    <h4>
+        <a href="https://en.wikipedia.org/wiki/Coffee" target="_blank">Details</a>
+    </h4>
+    <!-- French Roast -->
+    <h3>French Roast</h3>
+    <img src="/images/french-roast.jpeg" alt="French Roast image">
+    <p style="width: 50%;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil totam doloribus laudantium ab numquam itaque eaque officiis, sapiente commodi quisquam veritatis iusto cupiditate dignissimos nobis doloremque repellendus. Hic accusantium ad amet maxime veniam! Nemo culpa eligendi dicta non eius et facere iure accusamus aspernatur fugit!</p>
+    <h4>
+        <a href="https://en.wikipedia.org/wiki/Coffee" target="_blank">Details</a>
+    </h4>
+    <!-- Columbian Roast -->
+    <h3>French Roast</h3>
+    <img src="/images/columbian-roast.jpeg" alt="French Roast image">
+    <p style="width: 50%;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem aspernatur velit quod quasi asperiores, odit, quia et blanditiis praesentium, laborum unde quas sequi. Maiores illo explicabo voluptatibus sunt aliquid quisquam nam blanditiis architecto animi, quae nostrum consectetur dolorem quas nulla.</p>
+    <h4>
+        <a href="https://en.wikipedia.org/wiki/Coffee" target="_blank">Details</a>
+    </h4>
+    <br>
+    <br>
+    <br>
+    <br>
+</main>
+<!-- copyrigth -->
+<p>copyrigth ©2022</p>
+<!-- Back to top -->
+<h3><a href="#logo">Back To Top</a></h3>
+
+
+</body>
+</html>
